Warn a user if change in preferences requires restart.
--HG--
branch : develop

--- a/src/app/tape/dialogs/configpages/tapepreferencesconfigurationpage.ui
+++ b/src/app/tape/dialogs/configpages/tapepreferencesconfigurationpage.ui
@@ -263,7 +263,7 @@
            </rect>
           </property>
           <property name="text">
-           <string>Activate dark mode(Restart required)</string>
+           <string>Activate dark mode</string>
           </property>
          </widget>
         </widget>
