Fixed issue #914. Filtering custom seam allowance paths prevent including more than one. (grafted from 07fec74fad050330a1161776e27bb6c877354a59)
--HG--
branch : develop

--- a/src/libs/vtools/dialogs/tools/piece/tabs/tabpaths.ui
+++ b/src/libs/vtools/dialogs/tools/piece/tabs/tabpaths.ui
@@ -1015,6 +1015,9 @@
                    <height>0</height>
                   </size>
                  </property>
+                 <property name="dragDropMode">
+                  <enum>QAbstractItemView::InternalMove</enum>
+                 </property>
                 </widget>
                </widget>
               </item>
