--- a/src/app/valentina/dialogs/dialoglayoutsettings.ui
+++ b/src/app/valentina/dialogs/dialoglayoutsettings.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>533</height>
+    <width>601</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -326,6 +326,19 @@
               </property>
              </widget>
             </item>
+            <item>
+             <spacer name="verticalSpacer">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
            </layout>
           </widget>
          </item>
@@ -413,6 +426,20 @@
          <widget class="QCheckBox" name="checkBoxSaveLength">
           <property name="text">
            <string>Save length of the sheet</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="Line" name="line_7">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="checkBoxFollowGrainline">
+          <property name="text">
+           <string>Follow grainline</string>
           </property>
          </widget>
         </item>
